index.htmlの62行目のembedをiframeにした

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             <div class="article">
                 <div class="article-date" id="Galaxy_rule"><i class="fa fa-clock-o"></i>&nbsp;2017年08月30日</div>
                 <h2 class="article-title">Galaxy規則</h2>
-                <embed class="img-rounded article-img" alt="#" src="./doc/Galaxy.pdf" width="500" height="300" internalinstanceid="5">
+                <iframe class="img-rounded article-img" alt="#" src="./doc/Galaxy.pdf" width="500" height="300" internalinstanceid="5"></iframe>
                 <p class="article-paragraph">
                     規則は上のPDFを見てください。見づらければDL(ダウンロード)して見てください。
                 </p>
