規則等変更

--- a/index.html
+++ b/index.html
@@ -57,30 +57,23 @@
 
         <div class="content-left">
             <div class="article">
-                <div class="article-date" id="Galaxy_rule"><i class="fa fa-clock-o"></i>&nbsp;2017年08月30日</div>
-                <h2 class="article-title">Galaxy規則</h2>
-                <iframe class="img-rounded article-img" alt="#" src="./doc/Galaxy.pdf" width="500" height="300" internalinstanceid="5"></iframe>
-                <p class="article-paragraph">
-                    規則は上のPDFを見てください。見づらければDL(ダウンロード)して見てください。
-                </p>
-                <h3 class="article-paragraph-title">（ほぼ）毎日やっている団内イベント</h3>
-                <p class="article-paragraph">
-                  月曜日: セレスト<br>
-                  火曜日: コロッサス<br>
-                  水曜日: リヴァイアサン<br>
-                  木曜日: ティアマト<br>
-                  金曜日: シュバリエ<br>
-                  土曜日: ユグドラシル<br>
-                  日曜日: 直近のイベントの有利属性のマグナ<br>
+                <h1><a name="galaxy-%E3%81%AE%E8%A6%8F%E5%89%87" class="md-header-anchor"></a><span>Galaxy の規則</span></h1>
+                <h2><a name="%E5%B8%B8%E3%81%AB%E5%AE%88%E3%81%A3%E3%81%A6%E3%81%BB%E3%81%97%E3%81%84%E3%81%93%E3%81%A8" class="md-header-anchor"></a><span>常に守ってほしいこと</span></h2>
+                <ol>
+                <li><span>ログイン2週間途絶えると基本的に除団します(報告があればしません)</span></li>
+                <li><span>団員が救援を出した場合は積極的に入ってあげよう</span></li>
+                <li><span>高難易度系のクエストは自発者の意向に沿うこと(ディール等)</span></li>
+                <li><span>Discordの参加(</span><a href='https://discord.gg/s2cWhF9' target='_blank' class='url'>https://discord.gg/s2cWhF9</a><span>)を推奨しています.画面共有あります.連絡等で使うのでできれば入っていただきたい.VCへの参加は必須ではないです</span></li>
 
-                    </p><p>上記のマグナをAT(アサルトタイム)中に合計５回出しています。初心者の方はこれに参加するだけである程度武器を集めれて、強くなれるはずです。<br>
-                    また、団長と副団長が都合で無理な時はLobiで通知するので特別な事情がない限りLobiに入ってくれていた方がありがたいです。<br>
-                    団員が出している場合もあるのでそれを見た時は是非にご参加を。<br>
-                  </p>
+                </ol>
+                <h2><a name="%E5%8F%A4%E6%88%A6%E5%A0%B4%E3%81%AB%E3%81%A4%E3%81%84%E3%81%A6" class="md-header-anchor"></a><span>古戦場について</span></h2>
+                <ol>
+                <li><span>基本的に本戦出場は必須で, BクラスかAクラスを目指します</span></li>
+                <li><span>ノルマ等はありませんが, 予選中には最低でも1000万ほどは稼いでほしいです</span></li>
+                <li><span>HellやEx+の救援を出す場合は, 団のみに出してください.決して外部には流さないように細心の注意を払ってください</span></li>
 
-                  <!--<p>
-                    また、各マグナ攻略については記事一覧のマグナ攻略をご覧ください。特にセレスト、シュバリエは特殊攻撃が多いので注意してください。
-                </p>マグナ攻略かけたら実装-->
+                </ol>
+                <p>&nbsp;</p>
             </div>
 
             <!--<div class="article">
@@ -129,7 +122,7 @@
                 <h2 class="article-title">更新履歴(直近３件)</h2>
                 <ul class="article-list">
                     <li>
-                        <span class="article-list-date">2017年08月30日</span><br>
+                        <span class="article-list-date">2019年07月28日</span><br>
                         <a herf="#">Galaxyの規則を更新しました</a>
                         <span class="label label_normal">rule</span>
                     </li>
