--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                 <li><span>ログイン2週間途絶えると基本的に除団します(報告があればしません)</span></li>
                 <li><span>団員が救援を出した場合は積極的に入ってあげよう</span></li>
                 <li><span>高難易度系のクエストは自発者の意向に沿うこと(ディール等)</span></li>
-                <li><span>Discordの参加(</span><a href='https://discord.gg/s2cWhF9' target='_blank' class='url'>https://discord.gg/s2cWhF9</a><span>)を推奨しています.画面共有あります.連絡等で使うのでできれば入っていただきたい.VCへの参加は必須ではないです</span></li>
+                <li><span>Discordの参加を推奨しています.画面共有あります.連絡等で使うのでできれば入っていただきたい.VCへの参加は必須ではないです.招待コードはDiscordのDMにて送ります</span></li>
 
                 </ol>
                 <h2><a name="%E5%8F%A4%E6%88%A6%E5%A0%B4%E3%81%AB%E3%81%A4%E3%81%84%E3%81%A6" class="md-header-anchor"></a><span>古戦場について</span></h2>
