ルールの変更

--- a/detail.html
+++ b/detail.html
@@ -56,7 +56,7 @@
             勿論熟練者の方もご検討いただければ幸いです.<br>
             団内でマグナ確定流しを目指したり, 団内石マルチ, バハムートやグランデ, そしてHLも団内でクリアを目指していきたいと考えております.<br>
             ★ディールは自発者優先<br>
-            イベントも団内で協力したり, チャットも賑やか, 外部コミュニケーションツール"Lobi"もあります.※Lobiは任意ですが推奨しています.<br>
+            イベントも団内で協力したり, チャットも賑やか, 外部コミュニケーションツール"Discord"もあります.※Discordは任意ですが推奨しています.<br>
 
           </p>
         </div>
