--- a/index.html
+++ b/index.html
@@ -57,20 +57,21 @@
 
         <div class="content-left">
             <div class="article">
-                <h1><a name="galaxy-%E3%81%AE%E8%A6%8F%E5%89%87" class="md-header-anchor"></a><span>Galaxy の規則</span></h1>
-                <h2><a name="%E5%B8%B8%E3%81%AB%E5%AE%88%E3%81%A3%E3%81%A6%E3%81%BB%E3%81%97%E3%81%84%E3%81%93%E3%81%A8" class="md-header-anchor"></a><span>常に守ってほしいこと</span></h2>
-                <ol>
-                <li><span>ログイン2週間途絶えると基本的に除団します(報告があればしません)</span></li>
-                <li><span>団員が救援を出した場合は積極的に入ってあげよう</span></li>
-                <li><span>高難易度系のクエストは自発者の意向に沿うこと(ディール等)</span></li>
-                <li><span>Discordの参加を推奨しています.画面共有あります.連絡等で使うのでできれば入っていただきたい.VCへの参加は必須ではないです.招待コードはDiscordのDMにて送ります</span></li>
+                <h1>Galaxy の規則</h1>
+                <h2>常に守ってほしいこと</h2>
+                <ol start='' >
+                <li>ログイン2週間途絶えると基本的に除団します(報告があればしません)</li>
+                <li>団員が救援を出した場合は積極的に入ってあげよう</li>
+                <li>高難易度系のクエストは自発者の意向に沿うこと(ディール等)</li>
+                <li>Discordの参加(<a href='https://discord.gg/s2cWhF9' target='_blank' class='url'>https://discord.gg/s2cWhF9</a>)画面共有あります.連絡等で使うのでできれば入っていただきたい.VCへの参加は必須ではないです</li>
 
                 </ol>
-                <h2><a name="%E5%8F%A4%E6%88%A6%E5%A0%B4%E3%81%AB%E3%81%A4%E3%81%84%E3%81%A6" class="md-header-anchor"></a><span>古戦場について</span></h2>
-                <ol>
-                <li><span>基本的に本戦出場は必須で, BクラスかAクラスを目指します</span></li>
-                <li><span>ノルマ等はありませんが, 予選中には最低でも1000万ほどは稼いでほしいです</span></li>
-                <li><span>HellやEx+の救援を出す場合は, 団のみに出してください.決して外部には流さないように細心の注意を払ってください</span></li>
+                <h2>古戦場について</h2>
+                <ol start='' >
+                <li>基本的に本戦出場は必須で, Aクラスを目指します</li>
+                <li>ノルマは特にありませんが、古戦場期間中にログインしない、全く走らないなどはNGです。場合によっては退団していただくことになります。</li>
+                <li>HellやEx+の救援を出す場合は, 団のみに出してください.決して外部には流さないように細心の注意を払ってください</li>
+                <li>上記のように書きましたが、基本は当たり前ですがリアル優先です。その旨をしっかりと報告していただければ大丈夫です。</li>
 
                 </ol>
                 <p>&nbsp;</p>
@@ -122,7 +123,7 @@
                 <h2 class="article-title">更新履歴(直近３件)</h2>
                 <ul class="article-list">
                     <li>
-                        <span class="article-list-date">2019年07月28日</span><br>
+                        <span class="article-list-date">2019年09月27日</span><br>
                         <a herf="#">Galaxyの規則を更新しました</a>
                         <span class="label label_normal">rule</span>
                     </li>
@@ -174,7 +175,7 @@
         <div class="footer-copyright">Author: niya</div>
     </div>
 
-    <a href="http://graburugalaxy.web.fc2.com/index.html#" class="btn-pagetop" style="display: none;"><i class="fa fa-arrow-up"></i></a>
+    <a href="./index.html#" class="btn-pagetop" style="display: none;"><i class="fa fa-arrow-up"></i></a>
 
  </body>
  
