副団長の入れ替え

--- a/detail.html
+++ b/detail.html
@@ -68,7 +68,7 @@
           <h3>連絡先</h3>
           <p>
             団長: niya 16056912<br>
-            副長: 永遠 15429626<br>
+            副長: しおこす 19363912<br>
             加入希望者は挨拶板までお越しください.
             まずはお話だけでもどうぞ, IDのお間違えにはご注意願います.
           </p>
