--- a/detail.html
+++ b/detail.html
@@ -69,6 +69,7 @@
           <p>
             団長: niya 16056912<br>
             副長: しおこす 19363912<br>
+            副長: 滝本ひふみ 17436235<br>
             加入希望者は挨拶板までお越しください.
             まずはお話だけでもどうぞ, IDのお間違えにはご注意願います.
           </p>
